tests/neg-custom-args/captures/language-imports.scala
def test =
  import language.experimental.captureChecking // error
  import language.experimental.pureFunctions   // error
  1


